@@ -27,7 +27,8 @@ twitux_SOURCES = 							\
 	twitux-spell.c			twitux-spell.h			\
 	twitux-spell-dialog.c		twitux-spell-dialog.h		\
 	twitux-ui-utils.c		twitux-ui-utils.h		\
-	twitux-preferences.c		twitux-preferences.h
+	twitux-preferences.c		twitux-preferences.h		\
+	twitux-tweet-list.c		twitux-tweet-list.h
 
 twitux_LDADD=						\
 	$(top_builddir)/libtwitux/libtwitux.la		\
